CDA Documents 1st Draft

--- a/interoperability.tex
+++ b/interoperability.tex
@@ -99,7 +99,7 @@
 		\subsubsection{Το πρότυπο HL7, έκδοση 3}
 		Σκοπός της έκδοσης 3 του προτύπου HL7 είναι η υποστήριξη των ροών εργασίας σε όλο το φάσμα της Υγειονομικής Περίθαλψης. Η ανάπτυξη της ξεκίνησε το έτος 1995 και διήρκεσε 10 χρόνια, δεδομένου ότι μπήκε στην `αγορά' εν έτη 2005. Υιοθέτησε μια διαφορετική προσέγγιση σε σχέση με τον προκάτοχο του, αφού βασίστηκε σε αντικειμενοστραφή λογική ενώ προσπάθησε παράλληλα και να περιορίσει την ευελιξία που υπήρχε στην έκδοση 2 με βασικό στόχο να εξαλείψει τα μειονεκτήματα τα οποία συνόδευαν την ευελιξία αυτή\cite{HL7V3ProductSuite}.
 		
-		Η πιο βασική διαφοροποίηση της εν λόγω έκδοσης αποτελεί το μοντέλο RIM (Reference Information Model), το οποίο πηγάζει από την αντικειμενοστραφή λογική που έχει υιοθετηθεί\cite{HL7RIM}. Το μοντέλο RIM περιγράφει τις κλάσεις που ανήκουν στο RIM και μπορούν να αναπαραστήσουν το σύνολο των μηνυμάτων HL7 V3, τις σχέσεις μεταξύ τους, το μοντέλο καταστάσεων και τα πεδία της εκάστοτε κλάσης. Παρέχει μια ρητή αναπαράσταση των σημασιολογικών και λεκτικών συνδέσμων μεταξύ της πληροφορίας στα πεδία των μηνυμάτων του HL7. Σύμφωνα με τον οργανισμό HL7 το μοντέλο αυτό προσφέρει υψηλή ακρίβεια και βοηθάει σημαντικά στην μείωση του κόστους υλοποίησης. Τα βασικότερα πεδία που συναντάμε στις κλάσεις του RMI φαίνονται στον πίνακα \ref{tab:HL7_V3_RMI_fields}.
+		Η πιο βασική διαφοροποίηση της εν λόγω έκδοσης αποτελεί το μοντέλο RIM (Reference Information Model), το οποίο πηγάζει από την αντικειμενοστραφή λογική που έχει υιοθετηθεί\cite{HL7RIM}. Το μοντέλο RIM περιγράφει τις κλάσεις που ανήκουν στο RIM και μπορούν να αναπαραστήσουν το σύνολο των μηνυμάτων HL7 V3, τις σχέσεις μεταξύ τους, το μοντέλο καταστάσεων και τα πεδία της εκάστοτε κλάσης. Παρέχει μια ρητή αναπαράσταση των σημασιολογικών και λεκτικών συνδέσμων μεταξύ της πληροφορίας στα πεδία των μηνυμάτων του HL7. Σύμφωνα με τον οργανισμό HL7 το μοντέλο αυτό προσφέρει υψηλή ακρίβεια και βοηθάει σημαντικά στην μείωση του κόστους υλοποίησης. Τα βασικότερα πεδία που συναντάμε στις κλάσεις του RMI φαίνονται στον πίνακα \ref{tab:HL7_V3_RMI_fields}. \label{par:about_RIM}
 	\begin{table}[h]
 		\begin{center}
 		    \begin{tabular}{|c|l|}
@@ -152,8 +152,34 @@
 	\end{figure}
 \newpage		
 	\subsection{CDA Documents}
+	Το HL7 CDA (Clinical Document Architecture) αποτελεί ένα πρότυπο σήμανσης εγγράφου βασισμένο στο XML. Το CDA καθορίζει τη δομή και τη σημασιολογία των κλινικών εγγράφων με σκοπό την ανταλλαγή τους\cite{boone2011cda}. Ενώ το μοντέλο RIM του προτύπου HL7 V3 (βλ. \ref{par:about_RIM}) ορίζει τη δομή και την έννοια των επιμέρους συστατικών του εγγράφου προς ανταλλαγή. Ένα κλινικό έγγραφο είναι μια καταγραφή κλινικών εξετάσεων και υπηρεσιών με τα παρακάτω χαρακτηριστικά\cite{boone2011cda}:
+	\begin{itemize}
+		\item \textbf{Διάρκεια (Persistence): } ένα κλινικό έγγραφο ``συνεχίζει να υπάρχει σε μια αναλλοίωτη κατάσταση για μία χρονική περίοδο που καθορίζεται από τοπικές και ρυθμιστικές ανάγκες"\cite{dolin2001hl7}. Οι πάροχοι υπηρεσιών υγείας υποχρεούνται βάση νόμων και κανονισμών να διατηρούν τα κλινικά έγγραφα για συγκεκριμένες χρονικές περιόδους. Για παράδειγμα κάποιο κλινικό έγγραφο μπορεί να χρειάζεται να διατηρείται για όλη την διάρκεια ζωής του ασθενούς και για κάποια επιπλέον χρόνια.
+		\item \textbf{Υπευθυνότητα διαχείρισης (Stewardship): } ένα κλινικό έγγραφο διατηρείται από κάποιον οργανισμό στον οποίο και έχει ανατεθεί η φροντίδα του.
+		\item \textbf{Δυνατότητα πιστοποίησης: } ένα κλινικό έγγραφο είναι μία συλλογή πληροφοριών που πρόκειται να επικυρωθεί νομικά. 
+		\item \textbf{Πλαίσιο (Context): } ένα κλινικό έγγραφο θέτει το προκαθορισμένο πλαίσιο για το περιεχόμενο του. Το πλαίσιο ενός κλινικού εγγράφου περιλαμβάνει:
+		\begin{itemize}
+			\item Το αναγνωριστικό του εγγράφου,
+			\item ημερομηνίες και ώρες που σχετίζονται με το έγγραφο,
+			\item τον τύπου του εγγράφου,
+			\item τον ιδιοκτήτη του εγγράφου,
+			\item τον ασθενή (ή τους ασθενείς) στους οποίους αναφέρεται κτλπ
+		\end{itemize}
+		Οι παραπάνω πληροφορίες είναι ενδεικτικές πληροφορίες πλαισίου που αποθηκεύονται στο header ενός CDA.
+		\item \textbf{Αρτιότητα: } η επικύρωση ενός κλινικού εγγράφου εφαρμόζεται σε όλο και όχι σε τμήματα του εγγράφου χωρίς το πλήρες  πλαίσιό του.
+		\item \textbf{Αναγνωσιμότητα από ανθρώπους: } ένα κλινικό έγγραφο πρέπει να είναι αναγνώσιμο από ανθρώπους.
+	\end{itemize}
 	
-
+	Ένα CDA έγγραφο είναι ένα καθορισμένο και πλήρες αντικείμενο πληροφοριών που μπορεί να περιέχει κείμενο, εικόνες, ήχους και άλλο περιεχόμενο πολυμέσων. Ένα έγγραφο CDA αποτελείται από δυο μέρη:
+	\begin{itemize}
+		\item \textbf{Επικεφαλίδα (header): } η οποία περιέχει ουσιαστικά το πλαίσιο (context) όπως περιγράφηκε παραπάνω.
+		\item \textbf{Κυρίως σώμα (body): } περιέχει στοιχεία σχετικά με την εισαγωγή του ασθενή, τη διάγνωση, τα στοιχεία του ασθενή, τα φάρμακα κτλπ.
+	\end{itemize}
+	
+	Παρακάτω βλέπουμε ένα παράδειγμα για το πεδίο author μιας επικεφαλίδας:
+	\lstinputlisting[language=Xml]{cda_header.xml}
+	Παρακάτω βλέπουμε ένα παράδειγμα συστατικού (component) του κυρίου σώματος ενός εγγράφου CDA (ο κωδικός Loinc 10164-2 αναφέρεται στο ιστορικό της παρούσας ασθένειας του ασθενή):
+	\lstinputlisting[language=Xml]{cda_body.xml}
 		
 \section{Δυνατότητες διασύνδεσης με άλλα υποσυστήματα}
 
