--- a/references.bib
+++ b/references.bib
@@ -316,6 +316,13 @@
   Timestamp                = {2015.10.06}
 }
 
+@Book{boone2011cda,
+  Title                    = {The CDA Tm Book},
+  Author                   = {Boone, Keith W},
+  Publisher                = {Springer Science \& Business Media},
+  Year                     = {2011}
+}
+
 @Article{Borgman2012,
   Title                    = {The conundrum of sharing research data},
   Author                   = {Borgman, Christine L.},
@@ -859,6 +866,13 @@
   Url                      = {http://dx.doi.org/10.1016/j.clinthera.2014.05.003}
 }
 
+@Article{french2000decision,
+  Title                    = {Decision analysis and decision support systems},
+  Author                   = {French},
+  Journal                  = {The University of Manchester},
+  Year                     = {2000}
+}
+
 @Article{TheGameOfLife,
   Title                    = {The Game of Life: Designing a Gamification System to Increase Current Volunteer Participation and Retention in Volunteer-based Nonprofit Organizations},
   Author                   = {Fu, Ya Chiang},
@@ -1025,6 +1039,16 @@ Timothy Grance},
   Timestamp                = {2015.10.12}
 }
 
+@InProceedings{gunther2006hl7,
+  Title                    = {The HL7 reference information model under scrutiny},
+  Author                   = {Gunther SCHADOW, Charles N MEAD},
+  Booktitle                = {Ubiquity: technologies for better health in aging societies: proceedings of MIE2006},
+  Year                     = {2006},
+  Organization             = {IOS Press},
+  Pages                    = {151},
+  Volume                   = {124}
+}
+
 @Electronic{angular,
   Title                    = {Backbone.js vs AngularJS : Demystifying the Myths},
   Author                   = {Gupta, Raj},
@@ -1050,6 +1074,18 @@ Timothy Grance},
   Owner                    = {revekka},
   Timestamp                = {2015.10.11},
   Url                      = {http://www.sciencedirect.com/science/article/pii/S0957417415004273}
+}
+
+@Article{halperin1998effect,
+  Title                    = {The effect of short-term, temporary deferral on future blood donation},
+  Author                   = {Halperin, D and Baetens, J and Newman, B},
+  Journal                  = {Transfusion},
+  Year                     = {1998},
+  Number                   = {2},
+  Pages                    = {181--183},
+  Volume                   = {38},
+
+  Publisher                = {Wiley Online Library}
 }
 
 @InProceedings{6758978,
@@ -2123,30 +2159,3 @@ URN: urn:nbn:de:0114-fqs0501297},
   Date-modified            = {2015-10-03 18:50:17 +0000}
 }
 
-@inproceedings{gunther2006hl7,
-  title={The HL7 reference information model under scrutiny},
-  author={Gunther SCHADOW, Charles N MEAD},
-  booktitle={Ubiquity: technologies for better health in aging societies: proceedings of MIE2006},
-  volume={124},
-  pages={151},
-  year={2006},
-  organization={IOS Press}
-}
-
-@article{halperin1998effect,
-  title={The effect of short-term, temporary deferral on future blood donation},
-  author={Halperin, D and Baetens, J and Newman, B},
-  journal={Transfusion},
-  volume={38},
-  number={2},
-  pages={181--183},
-  year={1998},
-  publisher={Wiley Online Library}
-}
-
-@article{french2000decision,
-  title={Decision analysis and decision support systems},
-  author={French},
-  journal={The University of Manchester},
-  year={2000}
-}
