Interoperability - Patient Record

--- a/interoperability.tex
+++ b/interoperability.tex
@@ -165,7 +165,7 @@
 			\item ημερομηνίες και ώρες που σχετίζονται με το έγγραφο,
 			\item τον τύπου του εγγράφου,
 			\item τον ιδιοκτήτη του εγγράφου,
-			\item τον ασθενή (ή τους ασθενείς) στους οποίους αναφέρεται κτλπ
+			\item τον ασθενή (ή τους ασθενείς) στους οποίους αναφέρεται κ.λ.π.
 		\end{itemize}
 		Οι παραπάνω πληροφορίες είναι ενδεικτικές πληροφορίες πλαισίου που αποθηκεύονται στο header ενός CDA.
 		\item \textbf{Αρτιότητα: } η επικύρωση ενός κλινικού εγγράφου εφαρμόζεται σε όλο και όχι σε τμήματα του εγγράφου χωρίς το πλήρες  πλαίσιό του.
@@ -229,7 +229,7 @@
 		
 		\subsubsection{Ηλεκτρονική Συνταγογράφηση στην Ελλάδα}
 		
-		Η ηλεκτρονική συνταγογράφηση στην Ελλάδα βασίζεται στις οδηγίες του νόμου 3892/2010 (ΦΕΚ 189 Α) «Ηλεκτρονική καταχώριση και εκτέλεση ιατρικών συνταγών και παραπεμπτικών ιατρικών εξετάσεων». Σε αυτόν το νόμο καταγράφονται τα ζητήματα ηλεκτρονικής συνταγογράφησης και τα ζητήματα των ηλεκτρονικών παραπεμπτικών.
+		Η ηλεκτρονική συνταγογράφηση στην Ελλάδα βασίζεται στις οδηγίες του νόμου 3892/2010 (ΦΕΚ 189 Α) ``Ηλεκτρονική καταχώριση και εκτέλεση ιατρικών συνταγών και παραπεμπτικών ιατρικών εξετάσεων". Σε αυτόν το νόμο καταγράφονται τα ζητήματα ηλεκτρονικής συνταγογράφησης και τα ζητήματα των ηλεκτρονικών παραπεμπτικών.
 		
 		Ο υπεύθυνος φορέας στην Ελλάδα είναι η Γενική Γραμματεία Κοινωνικών Ασφαλίσεων του Υπουργείου Εργασίας, Κοινωνικής Ασφάλισης και Πρόνοιας. Το σύστημα υποστηρίζεται ηλεκτρονικά από την Ηλεκτρονική Διακυβέρνηση Κοινωνικής Ασφάλισης (ΗΔΙΚΑ Α.Ε.). Η ΗΔΙΚΑ αποτελεί μια ανώνυμη, μη κερδοσκοπικού χαρακτήρα του δημοσίου την οποία αποζημιώνουν οι εξυπηρετούμενοι φορείς για τις υπηρεσίες του παρέχει, όπως για παράδειγμα το έργο μισθοδοσίας των φορέων.  \cite{idika}
 		
@@ -290,18 +290,13 @@
 	
 \begin{itemize}
 
-\item Κέρδος χρόνου κατά την αναζήτηση και την συμπλήρωση στοιχείων του ιατρικού φακέλου. Η διείσδυση των τεχνολογιών αιχμής στον ιατρικό κόσμο εκσυγχρονίζεις την διαδικασία και κρατώντας όλα τα στοιχεία συγκεντρωμένα και με δυνατότητα άμεσης πρόσβασης - αναζήτησης επιταχύνουμε πολύ τις διαδικασίες.
+\item Ο ηλεκτρονικός ιατρικός φάκελος ασθενούς είναι μία τεχνολογική καινοτομία με μεγάλο όφελος και αποτελεσματικότητα στην παροχή φροντίδας υγείας. Οι πληροφορίες που αφορούν έναν συγκεκριμένο ασθενή έχουν συγκεντρωθεί και έχουν αποθηκευτεί στον ηλεκτρονικό υπολογιστή μειώνοντας στο ελάχιστο τον κίνδυνο να χαθούν ή να παραποιηθούν τα δεδομένα, ενώ μπορούν να χρησιμοποιηθούν παράλληλα από αρκετούς χρήστες των υπηρεσιών υγείας γρήγορα και άμεσα. 
 
-
-\item
-
-\item Ο ηλεκτρονικός ιατρικός φάκελος ασθενούς είναι μία τεχνολογική καινοτομία με μεγάλο όφελος και αποτελεσματικότητα στην παροχή φροντίδας υγείας. Οι πληροφορίες που αφορούν έναν συγκεκριμένο ασθενή έχουν συγκεντρωθεί και έχουν αποθηκευτεί στον ηλεκτρονικό υπολογιστή μειώνοντας ταυτόχρονα στο ελάχιστο τον κίνδυνο να χαθούν ή να παραποιηθούν τα δεδομένα, ενώ μπορούν να χρησιμοποιηθούν παράλληλα από αρκετούς χρήστες των υπηρεσιών υγείας γρήγορα και άμεσα. 
+\item Κέρδος χρόνου κατά την αναζήτηση και τη συμπλήρωση των στοιχείων του ιατρικού φακέλου. Η διείσδυση των τεχνολογιών αιχμής στον ιατρικό κόσμο εκσυγχρονίζει την διαδικασία, καθώς κρατάει όλα τα στοιχεία συγκεντρωμένα και παρέχει δυνατότητα άμεσης πρόσβασης - αναζήτησης, με αποτέλεσμα να επιταχύνει τις διαδικασίες.
 
 \item Η φροντίδα οργανώνεται καλύτερα, σωστότερα, και ταχύτερα γύρω από τον ασθενή. Ανάλογα με την κατάσταση της υγείας του ασθενούς οργανώνεται και προγραμματίζεται η θεραπεία και οι διαγνωστικές ή άλλου είδους θεραπευτικές παρεμβάσεις που πρέπει να γίνουν.
 
 \item Στους ηλεκτρονικούς φακέλους το ενδεχόμενο και η πιθανότητα λάθους ή παράλειψης ελαχιστοποιείται και έτσι δημιουργείται εμπιστοσύνη προς το σύστημα.
-
-
 
 \end{itemize}
 
