Interoperability - Patient Recordv2

--- a/interoperability.tex
+++ b/interoperability.tex
@@ -302,14 +302,15 @@
 
 
 \subsubsection{Ηλεκτρονικός Ιατρικός Φάκελος στην Ελλάδα}
-Στα πλαίσια της σημερινής εποχής όπου η σύγχρονη τεχνολογία και οι πηγές πληροφόρησης και ενημέρωσης σημείωσαν ταχύτατη εξέλιξη και πρόοδο, έγινε προσπάθεια αντικατάστασης των χάρτινων φακέλων ασθενών από τον ιατρικό ηλεκτρονικό φάκελο ασθενούς. Οι χειρόγραφοι φάκελοι φροντίδας υγείας παρέχουν χειρόγραφες σημειώσεις, παρατηρήσεις, εκτιμήσεις της κατάστασης των ασθενών, διαγνώσεις, εξετάσεις και θεραπείες με κύριο χαρακτηριστικό γνώρισμα την πολυπλοκότητα και τον αρκετά μεγάλο όγκο και αριθμό χάρτινου υλικού που συνοδεύουν τον κάθε ασθενή.
- Ωστόσο αποτελεί κοινή παραδοχή το γεγονός ότι ο χειρόγραφος φάκελος φροντίδας υγείας είναι διαθέσιμος αποκλειστικά και μόνο σε ένα μέρος, κάθε στιγμή, χωρίς να δίνει τη δυνατότητα μελέτης του από αρκετά άτομα ταυτόχρονα που ίσως θα ήταν απαραίτητη. Με την χειρόγραφη καταχώρηση υπάρχει ο κίνδυνος της αντιγραφής των λαθών από την πηγή των δεδομένων με αξιόλογες επιπτώσεις στον ασθενή. Το ενδεχόμενο της παρανόησης είναι επίσης εφικτό από το άτομο που μελετάει τους χειρόγραφους φακέλους υγείας. Ο συνεχώς αυξανόμενος όγκος χαρτιού που δημιουργείται οδηγεί σε επιπρόσθετα προβλήματα. Έτσι η συγκέντρωση των δεδομένων για έρευνα καθίσταται δύσκολη. Στους χειρόγραφους φακέλους φροντίδας υγείας, ακριβώς επειδή είναι χειρόγραφοι, το πρόβλημα της ευαναγνωστικότητας και των λαθών συναντάται αρκετά συχνά. Με βάση τα παραπάνω ο χειρόγραφος φάκελος αποτελεί ένα ανεπαρκή τρόπο παρακολούθησης της κατάστασης της υγείας των ασθενών.
 
- Σε αντίθεση με τους χειρόγραφους φακέλους φροντίδας υγείας, οι ηλεκτρονικοί ιατρικοί φάκελοι αποτελούν μια τεχνολογική καινοτομία με μεγάλο όφελος και αποτελεσματικότητα στη παροχή φροντίδας υγείας. Οι πληροφορίες που αφορούν ένα συγκεκριμένο ασθενή έχουν συγκεντρωθεί και έχουν
-αποθηκευτεί στον ηλεκτρονικό υπολογιστή μειώνοντας ταυτόχρονα στο ελάχιστο τον κίνδυνο να χαθούν ή να παραποιηθούν τα δεδομένα, ενώ μπορούν να χρησιμοποιηθούν παράλληλα από αρκετούς χρήστες των υπηρεσιών υγείας γρήγορα και άμεσα. Η φροντίδα οργανώνεται καλύτερα και σωστότερα, και ταχύτερα γύρω από τον ασθενή. Ανάλογα με την κατάσταση της υγείας του ασθενούς οργανώνεται και προγραμματίζεται η θεραπεία και οι διαγνωστικές ή άλλου είδους θεραπευτικές παρεμβάσεις που πρέπει να γίνουν. Στους ηλεκτρονικούς φακέλους το ενδεχόμενο και η πιθανότητα λάθους ή παράλειψης ελαχιστοποιείται και έτσι δημιουργείται εμπιστοσύνη προς το σύστημα του Η.Φ.Α. Τέλος, βασικό χαρακτηριστικό γνώρισμα αποτελεί η εμπιστευτικότητα των στοιχείων των ασθενών που ενισχύει ακόμα περισσότερο την εμπιστοσύνη των ασθενών στο σύστημα του ηλεκτρονικού ιατρικού φακέλου.
- 
-Γενικά η προσφορά του ηλεκτρονικού ιατρικού φακέλου είναι αρκετά σημαντική στη φροντίδα υγείας των ασθενών, ωστόσο χαρακτηρίζεται από τη μεγάλη πολυπλοκότητα που κάνει δυνατή τη χρήση του ηλεκτρονικού ιατρικού φακέλου μόνο από καλά εκπαιδευμένο και εξειδικευμένο στις γνώσεις ηλεκτρονικών υπολογιστών ιατρικό, διοικητικό, νοσηλευτικό, κ.α. προσωπικό. Συγκεκριμένα η χρήση του ηλεκτρονικού υπολογιστή είναι δυνατή μόνο από άτομα τα οποία γνωρίζουν την συγκεκριμένη ορολογία που χρησιμοποιείται στον υπολογιστή, που γνωρίζουν πως θα αποθηκεύσουν, πως θα παρουσιάσουν και πως θα συσχετίσουν τα δεδομένα και τα στοιχεία που εισάγουν στον υπολογιστή και στον ηλεκτρονικό ιατρικό φάκελο.\cite{hlektronikosIatrikosFakelos} Τέλος είναι πολύ σημαντικό οι χρήστες του Η.Φ.Α. να γνωρίζουν ποιος είναι ο σκοπός της χρήσης του  ηλεκτρονικού ιατρικού φακέλου , ποιο είναι το περιεχόμενο της χρήσης, ποια η σημασία των δεδομένων, με ποιο τρόπο γίνεται η ταξινόμηση και η κωδικοποίηση των δεδομένων, ποια είναι η δομή του φακέλου ασθενών και ποιο είναι το μέσο παρουσίασης του φακέλου. Όλα τα παραπάνω επομένως καθιστούν δύσκολη την εφαρμογή του συστήματος του ηλεκτρονικού ιατρικού φακέλου.
+		Η εφαρμογή της Πληροφορικής στον δημόσιο τομέα στην Ελλάδα καθυστέρησε πολύ. Οι ιατρικοί φάκελοι στα περισσότερα Δημόσια νοσοκομεία ακόμα και σήμερα παραμένουν χειρόγραφοι, ογκώδεις, ασαφείς, δυσεύρετοι, δυσανάγνωστοι ενώ πολλές φορές χάνονται, φθείρονται και αλλοιώνονται. Η αναζήτηση ιστορικών και κλινικών δεδομένων είναι πολύ δύσκολη, ενώ η εξαγωγή στατιστικών συμπερασμάτων εντελώς αβέβαιη και πολύπλοκη. Στις περιπτώσεις που υπάρχει ατομικός ηλεκτρονικός φάκελος, τα περιεχόμενα δεδομένα δεν μπορούν να επικοινωνήσουν ακόμα και με το εσωτερικό δίκτυο του ιδίου νοσοκομείου, με κυριότερη αιτία το ότι ο ηλεκτρονικός φάκελος και το πληροφοριακό διαχειριστικό σύστημα δεν έχουν ούτε την κατάλληλη διασύνδεση ούτε την απαραίτητη διαλειτουργικότητα.
 
+		H κλινική πληροφορία για τους εξωτερικούς ασθενείς καταγράφεται χειρόγραφα από τους εφημερεύοντες γιατρούς σε πράσινες καρτέλες, και όταν ο ασθενής επισκεφθεί ξανά το νοσοκομείο πολλές φορές αναγκάζεται να αποκτήσει νέα κάρτα είτε γιατί η προηγούμενη χάθηκε, είτε γιατί καταχωρήθηκε με διαφορετικό όνομα αποκτώντας άλλο αριθμό μητρώου. Ακόμα κι αν ο ασθενής έχει καταχωρηθεί στο Διαχειριστικό Πληροφοριακό σύστημα αποκτώντας αυτόματα έναν μοναδικό Αριθμό Μητρώου από το Γραφείο Κίνησης ή τη Γραμματεία Εξωτερικών ιατρείων, οι γιατροί συνεχίζουν να αναζητούν την χειρόγραφη καρτέλα για να καταγράψουν τη διάγνωση και το θεραπευτικό σχήμα, αρνούμενοι την καταγραφή όχι μόνο στο τερματικό τους, αλλά ακόμα και στο εκτυπωμένο έντυπο νοσηλείας. Απλές προγραμματισμένες επεμβάσεις ενώ είναι ήδη καταχωρημένες στο Διαχειριστικό Πληροφοριακό σύστημα και απαιτούν την χωρίς πολυπλοκότητα χειρισμού ηλεκτρονική επιβεβαίωση από το αντίστοιχο ιατρικό / νοσηλευτικό προσωπικό, εξακολουθούν να καταγράφονται στις πράσινες καρτέλες.
+
+		Η διαδικασία συμπλήρωσης του ιατρικού φακέλου για τους νοσηλευόμενους ασθενείς δεν είναι ιδιαίτερα σαφής ως προς τη διάγνωση και την πορεία της νόσου, ενώ όσον αφορά στη συνταγογράφηση τα πράγματα είναι οργανωμένα, καθώς στα περισσότερα νοσοκομεία εφαρμόζεται το σύστημα e=prescription. Η ασάφεια αυτή είναι ιδιαίτερα εμφανής στις περιπτώσεις της διάγνωσης στο ηλεκτρονικό εξιτήριο, στο οποίο οι διοικητικοί υπάλληλοι αντιγράφοντας στον ηλεκτρονικό υπολογιστή τη χειρόγραφη διάγνωση εξόδου αντιμετωπίζουν προβλήματα με το χειρόγραφο κείμενο, καθώς μπορεί να είναι πολύ γενικό ή δυσδιάκριτο. Για παράδειγμα η χειρόγραφη διάγνωση ``σχιζοφρένεια, σχιζοτυπικές διαταραχές" στο νοσοκομείο Α αποτελεί έναν γενικό χαρακτηρισμό νόσου, ενώ σύμφωνα με τη διεθνή κωδικοποίηση ICD-10 μπορεί να σημαίνει 9 διαφορετικές μορφές νόσου (F20	Σχιζοφρένεια,F21	Σχιζοτυπική διαταραχή, F22 Εμμένουσες παραληρηματικές διαταραχές, F23 Οξείες και παροδικές ψυχωσικές διαταραχές, F24 Επαγωγική παραληρηματική διαταραχή,  F25 Σχιζοσυναισθηματικές διαταραχές, F28 Άλλες μη οργανικές ψυχωσικές διαταραχές, F29 Διάφορες μορφές μη οργανικής ψύχωσης) \cite{galinos}. Μεγάλο επίσης πρόβλημα αποτελεί η ηλεκτρονική καταγραφή χειρουργικών επεμβάσεων και η μετεγχειρητική κατάσταση, που απαιτούν μορφή ελεύθερου κειμένου, με συνέπεια την απομόνωση της κλινικής κατάστασης του ασθενή σε κάποιον φθαρμένο ογκώδη φάκελο, στοιχείο του Αρχείου κάθε νοσοκομείου. Οι γενικεύσεις στις διαγνώσεις εισόδου ή εξόδου ενός ασθενούς παρεμποδίζουν την στοιχειώδη πληροφορία για την κατάσταση υγείας. Για παράδειγμα ο ανωτέρω ασθενής σε περίπτωση μετέπειτα εισαγωγής σε ένα διαφορετικό νοσοκομείο συνοδευόμενος από τη γενική διάγνωση ``σχιζοφρένεια, σχιζοτυπικές διαταραχές", υπόκειται σε πληθώρα περιττών και επαναλαμβανόμενων εξετάσεων 
+		
+		Το 2014 ξεκίνησε η εφαρμογή του ηλεκτρονικού Φακέλου Υγείας των ασφαλισμένων του ΕΟΠΥΥ.  φάκελος αποτελεί την ηλεκτρονική αποτύπωση του βιβλιαρίου υγείας του κάθε ασφαλισμένου του ΕΟΠΥΥ και περιέχει πληροφορίες σχετικά με διαγνώσεις, νοσηλείες, επισκέψεις, παροχές, ιατρικές πράξεις, αιμοκαθάρσεις και φάρμακα, αλλά δεν ταυτίζεται με τον ηλεκτρονικό ιατρικό φάκελο. Ο Φάκελος Ασφάλισης Υγείας -που ουσιαστικά συνδέει όλο το σύστημα δηλαδή την ΗΔΙΚΑ, e-dapy, ΚΜΕΣ με τον ΕΟΠΥΥ και σε δεύτερο χρόνο τα νοσοκομεία- αποτελεί ένα εργαλείο προκειμένου να ελέγχονται όσοι γιατροί πραγματοποιούν υπέρ-συνταγογράφηση είτε φαρμάκων, είτε διαγνωστικών πράξεων. Σύμφωνα με την διοίκηση του ΕΟΠΥΥ, ο  προσωπικός Φάκελος Υγείας κάθε ασφαλισμένου περιέχει στοιχεία για το σύνολο των νοσηλειών, των υπηρεσιών υγείας, των υλικών, των ασθενειών και των διαγνώσεων που υπάρχουν καταγεγραμμένες στο μηχανογραφικό σύστημά του. Στον Φάκελο Ασφάλισης Υγείας έχει δυνατότητα πρόσβασης μόνον ο ασφαλισμένος με τους κωδικούς που διαθέτει καθώς αφορά προσωπικά του στοιχεία, τα οποία έχει δυνατότητα να τα γνωστοποιήσει με προσωπική του ευθύνη.
+	
 	
 	\subsection{epSOS}
 	
