--- a/references.bib
+++ b/references.bib
@@ -713,6 +713,7 @@
   Number                   = {12},
   Pages                    = {2026--2027},
   Volume                   = {5},
+
   Acmid                    = {2367568},
   Doi                      = {10.14778/2367502.2367568},
   ISSN                     = {2150-8097},
@@ -889,6 +890,15 @@
 
   Owner                    = {revekka},
   Timestamp                = {2015.10.15}
+}
+
+@Electronic{galinos,
+  Title                    = {ICD-10},
+  Author                   = {Galinos},
+  Url                      = {http://www.galinos.gr/web/drugs/main/lists/icdcodes},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.21}
 }
 
 @Electronic{gartnerGamification,
@@ -1598,6 +1608,7 @@ Timothy Grance},
   Number                   = {2},
   Pages                    = {--},
   Volume                   = {23},
+
   Abstract                 = {Electronic medical record (EMR) systems have been in use for more than 2 decades. Studies documenting nursing satisfaction with an EMR system, the benefits of an EMR, implementation barriers, user acceptance, the importance of staff buy-in, and the importance of attitudes toward and expectations from user buy-in are in the literature. Central to many studies is the importance of nursing staff buy-in to the successful implementation and ongoing use of an EMR, as well as the dependency of buy-in on staff attitudes and expectations. Buy-in is a precursor to effective use. Consequently, staff buy-in is a prerequisite to collecting and making optimum use of the data contained in an EMR. Data collected from an EMR containing rich, accurate documentation of nursing interventions and patient responses support evidence-based practice changes and documentation of the import of the care provided by nurses.},
   ISSN                     = {1538-2931},
   Keywords                 = {Attitude to computers, Computerized, Medical records systems},
