Interoperability - Patient Recordv3

--- a/interoperability.tex
+++ b/interoperability.tex
@@ -345,7 +345,7 @@
 		
 	\begin{table}[h]
 		\centering
-		\begin{tabular}{|l|c|}
+		\begin{tabular}{| l |c|}
 		    \hline
 		    \rowcolor{grayy}
 		    \textbf{Περιγραφή} & \textbf{Μέσο κόστος}
@@ -381,14 +381,14 @@
 	\subsection{Decision Support Systems \& Clinical Decision Support}
 		Τα συστήματα υποστήριξης αποφάσεων (DSS - Decision Support Systems) μπορούν να οριστούν ως εφαρμογές λογισμικού οι οποίες παρέχουν υποστήριξη κατά την διαδικασία λήψης αποφάσεων, παρέχοντας βοήθεια στους χρήστες να κατανοήσουν τις επιπτώσεις των δράσεών τους\cite{french2000decision}. Τα DSS βρίσκουν χρήση σ' ένα ευρύ φάσμα εφαρμογών και εξυπηρετούν τη διαχείριση, τη λειτουργία αλλά και τα επίπεδα σχεδιασμού ενός συστήματος ή οργανισμού. Τα συστήματα υποστήριξης λήψης αποφάσεων μπορεί να είναι είτε πλήρως μηχανογραφημένα, είτε να διαχειρίζονται από ανθρώπινο δυναμικό  ή να αποτελούν συνδυασμό και των δύο (υβριδικά) \cite{miller}. 
 		
-		Τα συστήματα υποστήριξης λήψης κλινικών αποφάσεων (CDS) παρέχουν στους κλινικούς γιατρούς, στο προσωπικό, στους ασθενείς, και σε άλλα άτομα με γνώσεις σχετικές με αντικείμενα του τομέα υγείας, υποστήριξη στα κλινικά καθήκοντα τα οποία είναι συσχετισμένα με την διαδικασία απόφασης, με σκοπό  την ενίσχυση της υγείας και της υγειονομικής περίθαλψης\cite{clinicalDecision}. Ένα σύστημα υποστήριξης κλινικών αποφάσεων, ορίζεται ως ένα ``ενεργό σύστημα γνώσης, το οποίο χρησιμοποιεί δύο ή περισσότερες κατηγορίες δεδομένων του ασθενούς για να δημιουργήσει εξειδικευμένες συμβουλές". Ένα CDS σύστημα είναι απλά ένα σύστημα υποστήριξης αποφάσεων που επικεντρώνεται στην διαχείριση της γνώσης με τέτοιο τρόπο ώστε να παρέχει αξιόπιστες κλινικές συμβουλές. Σε αυτό το σημείο κρίνουμε απαραίτητο να τονίσουμε όταν CDS δεν αποσκοπεί σε καμία περίπτωση σε αντικατάσταση του γιατρού αλλά έχει καθαρά επικουρικό ρόλο με τον γιατρό να έχει πάντα τον τελευταίο λόγο\cite{miller}. 
+		Τα συστήματα υποστήριξης λήψης κλινικών αποφάσεων (CDS) παρέχουν στους κλινικούς γιατρούς, στο προσωπικό, στους ασθενείς, και σε άλλα άτομα με γνώσεις σχετικές με αντικείμενα του τομέα υγείας, υποστήριξη στα κλινικά καθήκοντα τα οποία είναι συσχετισμένα με την διαδικασία απόφασης, με σκοπό  την ενίσχυση της υγείας και της υγειονομικής περίθαλψης\cite{clinicalDecision}. Ένα σύστημα υποστήριξης κλινικών αποφάσεων, ορίζεται ως ένα ``ενεργό σύστημα γνώσης, το οποίο χρησιμοποιεί δύο ή περισσότερες κατηγορίες δεδομένων του ασθενούς για να δημιουργήσει εξειδικευμένες συμβουλές". Ένα CDS σύστημα είναι απλά ένα σύστημα υποστήριξης αποφάσεων που επικεντρώνεται στην διαχείριση της γνώσης με τέτοιο τρόπο ώστε να παρέχει αξιόπιστες κλινικές συμβουλές. Σε αυτό το σημείο κρίνουμε απαραίτητο να τονίσουμε ότι το CDS δεν αποσκοπεί σε καμία περίπτωση σε αντικατάσταση του γιατρού αλλά έχει καθαρά επικουρικό ρόλο, με τον γιατρό να έχει πάντα τον τελευταίο λόγο\cite{miller}.
 		
-		Στην παρούσα διπλωματική μας ενδιαφέρουν τα CDS συστήματα τα οποία στηρίζονται σε γνώση, δηλαδή τα συστήματα γνώσης. Τα συστήματα αυτά αποτελούνται από τρία μέρη: τη βάση των γνώσεων, έναν μηχανισμό εξαγωγής συμπερασμάτων, και ένα μηχανισμό επικοινωνίας. Η βάση γνώσης περιέχει τους κανόνες και τις συσχετίσεις των στοιχείων που συγκεντρώνονται σε αυτήν, που συνήθως παίρνουν τη μορφή του κανόνες IF-THEN. Το σύστημα συμπερασμού συνδυάζει τους κανόνες από τη βάση της γνώσης με τα δεδομένα. Ο μηχανισμός επικοινωνίας επιτρέπει στο σύστημα να δείχνει τα αποτελέσματα που προκύπτουν στον αιτούντα.
+		Στην παρούσα διπλωματική μας ενδιαφέρουν τα CDS συστήματα, τα οποία στηρίζονται σε κάποια βάση γνώσης (Knowledge-based CDSS) .Τα συστήματα αυτά αποτελούνται από τρία μέρη: τη βάση των γνώσεων, έναν μηχανισμό εξαγωγής συμπερασμάτων, και ένα μηχανισμό επικοινωνίας. Η βάση γνώσης περιέχει τους κανόνες και τις συσχετίσεις των στοιχείων που συγκεντρώνονται σε αυτήν, που συνήθως παίρνουν τη μορφή του κανόνες IF-THEN. Το σύστημα συμπερασμού συνδυάζει τους κανόνες από τη βάση της γνώσης με τα δεδομένα. Ο μηχανισμός επικοινωνίας επιτρέπει στο σύστημα να δείχνει τα αποτελέσματα που προκύπτουν στον αιτούντα.
 		
 \section{Υλοποίηση}
 
 
-		Στόχος είναι η υλοποίηση μίας υπηρεσίας, η οποία θα τρέχει σε cloud και θα κάνει έναν πρωταρχικό έλεγχο σχετικά με το αν ο εθελοντής επιτρέπεται να αιμοδοτήσει ή όχι. Η υπηρεσία εξετάζει την καταλληλότητα του εθελοντή, με βάση το ιατρικό ιστορικό του. Αντλεί δεδομένα από τον ηλεκτρονικό ιατρικό του φάκελο τους ασθενούς και την ηλεκτρονική συνταγογράφηση με σκοπό να εξετάσει αν υπάρχουν διαγνώσεις ή συνταγογραφήσεις, οι οποίες παραβιάζουν τα κριτήρια επιλεξιμότητας. Η υπηρεσία ανακτά τα δεδομένα που χρειάζεται για τους ελέγχους της με σύνδεση στο σύστημα epSOS, κάνοντας χρήση του ΑΜΚΑ του συγκεκριμένου εθελοντή.
+		Στόχος είναι η υλοποίηση μίας υπηρεσίας, η οποία θα τρέχει σε υπολογιστικό νέφος ιδιωτικού τύπου (private cloud) και θα κάνει έναν πρωταρχικό έλεγχο σχετικά με το αν ο εθελοντής επιτρέπεται να αιμοδοτήσει ή όχι. Η υπηρεσία εξετάζει την καταλληλότητα του εθελοντή, με βάση το ιατρικό ιστορικό του. Αντλεί δεδομένα από τον ηλεκτρονικό ιατρικό του φάκελο τους ασθενούς και την ηλεκτρονική συνταγογράφηση με σκοπό να εξετάσει αν υπάρχουν διαγνώσεις ή συνταγογραφήσεις, οι οποίες παραβιάζουν τα κριτήρια επιλεξιμότητας. Η υπηρεσία ανακτά τα δεδομένα που χρειάζεται για τους ελέγχους της με σύνδεση στο σύστημα epSOS, κάνοντας χρήση του ΑΜΚΑ του συγκεκριμένου εθελοντή.
 		
 		Τα κριτήρια επιλεξιμότητας, τα οποία προκύπτουν με βάση τις οδηγίες του WHO, \cite{safety} που ελέγχει το σύστημα μας είναι τα εξής.
 		
@@ -431,7 +431,7 @@
 		
 	\subsubsection{Αρχιτεκτονική και Σχεδιασμός}
 		
-		Τα στοιχεία που χρησιμοποιούνται στην δημιουργία του Eligibility as a Service είναι τα εξής:
+		Τα στοιχεία και συστήματα που χρησιμοποιούνται στην δημιουργία του Eligibility as a Service είναι τα εξής:
 		
 		\begin{itemize}
 		
